@@ -349,6 +349,7 @@ class FactoryTool(PloneBaseTool, UniqueObject, SimpleItem):
         return hasattr(ob, 'meta_type') and ob.meta_type == TempFolder.meta_type
 
     def __before_publishing_traverse__(self, other, REQUEST):
+        
         if REQUEST.get(FACTORY_INFO, None):
             del REQUEST[FACTORY_INFO]
 
@@ -358,22 +359,30 @@ class FactoryTool(PloneBaseTool, UniqueObject, SimpleItem):
         #    (1) a type, and (2) an id
         if len(stack) < 2: # ignore
             return
+        
+        # Keep track of how many path elements we want to eat
+        gobbled_length = 0
+        
         type_name = stack[-1]
         types_tool = getToolByName(self, 'portal_types')
         # make sure this is really a type name
         if not type_name in types_tool.listContentTypes():
             return # nope -- do nothing
-
+        
+        gobbled_length += 1
+        
         id = stack[-2]
         intended_parent = aq_parent(self)
         if hasattr(intended_parent, id):
             return # do normal traversal via __bobo_traverse__
+        
+        gobbled_length += 1
+        
+        # about to create an object
 
-        # about to create an object - further traversal will be prevented
-        #
         # before halting traversal, check for method aliases
         # stack should be [...optional stuff..., id, type_name]
-        key = stack and stack[-3] or '(Default)'
+        key = len(stack) >= 3 and stack[-3] or '(Default)'
         ti = types_tool.getTypeInfo(type_name)
         method_id = ti and ti.queryMethodID(key)
         if method_id:
@@ -381,13 +390,22 @@ class FactoryTool(PloneBaseTool, UniqueObject, SimpleItem):
                 del(stack[-3])
             if method_id != '(Default)':
                 stack.insert(-2, method_id)
+                gobbled_length += 1
             REQUEST._hacked_path = 1
+        else:
+            gobbled_length += 1
+        
+        # Pevent further traversal if we are doing a normal factory request,
+        # but allow it if there is a traversal sub-path beyond the (edit)
+        # view on the content item. In this case, portal_factory will not
+        # be responsible for rendering the object.
+        if len(stack) <= gobbled_length:
+            REQUEST.set('TraversalRequestNameStack', [])
         
         stack.reverse()
         factory_info = {'stack':stack}
         REQUEST.set(FACTORY_INFO, factory_info)
-        REQUEST.set('TraversalRequestNameStack', [])
-
+    
     def __bobo_traverse__(self, REQUEST, name):
         # __bobo_traverse__ can be invoked directly by a restricted_traverse method call
         # in which case the traversal stack will not have been cleared by __before_publishing_traverse__
